<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:background="@drawable/customdialog_bg" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.0"
                android:text="@string/book_details"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_list" />

            <ImageView
                android:id="@+id/details_cover"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/baidu" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="2dp"
                android:background="@drawable/line_list" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:layout_weight="1.0"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="Title:"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/detail_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:text="Author:"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/detail_storage"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="Storage:"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/detail_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:text="progress:"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <TextView
                android:id="@+id/detail_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_weight="1.0"
                android:text="language:"
                android:textColor="#ff545454"
                android:textSize="12.0sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="3dp"
                android:background="@drawable/line_list" />

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/openBookBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/list_round_selector_holo_light"
                    android:text="@string/read_book"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/favoriteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/list_round_selector_holo_light"
                    android:text="@string/favorite_book"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/list_round_selector_holo_light"
                    android:text="@string/share_book"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/delFavBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/list_round_selector_holo_light"
                    android:text="@string/del_book"
                    android:visibility="gone"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>